src/objects/Pokemon__c.object
<CustomObject>
    <fields>
        <fullName>Catch_Method__c</fullName>
        <label>Catch Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breeding</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Fossil</fullName>
                </value>
                <value>
                    <fullName>Game Corner</fullName>
                </value>
                <value>
                    <fullName>Headbutt</fullName>
                </value>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Starter</fullName>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caught_Form__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Caught Form</label>
        <referenceTo>Pokemon_Data__c</referenceTo>
        <relationshipLabel>Pokemons (Caught)</relationshipLabel>
        <relationshipName>Caught_Pokemons</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cause_of_Death__c</fullName>
        <label>Cause of Death</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Level__c</fullName>
        <label>Death Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Death__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>If you&apos;re creating a new Pokemon this field will be filled automatically</inlineHelpText>
        <label>Form</label>
        <referenceTo>Pokemon_Data__c</referenceTo>
        <relationshipLabel>Pokemons</relationshipLabel>
        <relationshipName>Pokemons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Genderless</fullName>
                    <default>true</default>
                    <label>Genderless</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Alolan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Alolan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Catch Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nuzlocke__c</fullName>
        <label>Nuzlocke</label>
        <referenceTo>Nuzlocke__c</referenceTo>
        <relationshipLabel>Pokemons</relationshipLabel>
        <relationshipName>Pokemons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <formula>Nuzlocke__r.Hero__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <label>Variant</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Alolan</fullName>
                </value>
                <value>
                    <fullName>Galarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pokemon</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Form__c</columns>
        <columns>Gender__c</columns>
        <columns>Location__c</columns>
        <columns>Catch_Method__c</columns>
        <columns>Death__c</columns>
        <columns>Death_Level__c</columns>
        <columns>Cause_of_Death__c</columns>
        <columns>Nuzlocke__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Dead</fullName>
        <columns>NAME</columns>
        <columns>Form__c</columns>
        <columns>Gender__c</columns>
        <columns>Trainer__c</columns>
        <columns>Death__c</columns>
        <columns>Death_Level__c</columns>
        <columns>Cause_of_Death__c</columns>
        <columns>Nuzlocke__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Death__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Dead</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pokemons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Death_Info_While_Alive</fullName>
        <active>true</active>
        <description>You can&apos;t provide death information while Pokemon is not dead</description>
        <errorConditionFormula>AND(
 Death__c = false,
 OR(
  NOT(ISBLANK(Death_Level__c)),
  NOT(ISBLANK(Cause_of_Death__c))
 )
)</errorConditionFormula>
        <errorMessage>You can&apos;t provide death information while Pokemon is not dead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Forbidden_Alolan_Form</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				ISPICKVAL(Variant__c, &apos;Alolan&apos;),
				NOT(INCLUDES(Form__r.Region_Specific_Variants__c, &apos;Alolan&apos;))
)</errorConditionFormula>
        <errorDisplayField>Variant__c</errorDisplayField>
        <errorMessage>The Pokemon form doesn&apos;t have alolan variant</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Forbidden_Galarian_Form</fullName>
        <active>true</active>
        <description>The Pokemon form doesn&apos;t have galarian variant</description>
        <errorConditionFormula>AND(
    ISPICKVAL(Variant__c, &apos;Galarian&apos;),
    NOT(INCLUDES(Form__r.Region_Specific_Variants__c, &apos;Galarian&apos;))
)</errorConditionFormula>
        <errorDisplayField>Variant__c</errorDisplayField>
        <errorMessage>The Pokemon form doesn&apos;t have galarian variant</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Form_Wrong_Family</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Caught_Form__r.Family__c) &lt;&gt; TEXT(Form__r.Family__c)</errorConditionFormula>
        <errorDisplayField>Form__c</errorDisplayField>
        <errorMessage>The Pokemon form must be related to the caught Pokemon</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Form_Wrong_Stage</fullName>
        <active>true</active>
        <errorConditionFormula>Caught_Form__r.Family_Stage__c &gt; Form__r.Family_Stage__c</errorConditionFormula>
        <errorDisplayField>Form__c</errorDisplayField>
        <errorMessage>The Pokemon form stage cannot be lower than caught form stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Death_Level</fullName>
        <active>true</active>
        <description>Deth level must be in range 1-100</description>
        <errorConditionFormula>AND(
 Death__c = true,
 OR(
  Death_Level__c &lt; 1,
  Death_Level__c &gt; 100
 )
)</errorConditionFormula>
        <errorDisplayField>Death_Level__c</errorDisplayField>
        <errorMessage>Deth level must be in range 1-100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nuzlocke_Finished</fullName>
        <active>true</active>
        <description>You can&apos;t add new Pokemon to finished Nuzlocke</description>
        <errorConditionFormula>AND(
 ISNEW(),
 Nuzlocke__r.Is_Finished__c
)</errorConditionFormula>
        <errorMessage>You can&apos;t add new Pokemon to finished Nuzlocke</errorMessage>
    </validationRules>
</CustomObject>